--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/cinnamonroll.html">Cinnamon Roll Pull-Apart Toast</a>
+    <ul>
+      <li><a href="./recipes/cinnamonroll.html">Cinnamon Roll Pull-Apart Toast</a></li>
+      <li><a href="./recipes/tunasalad.html">Tuna Salad</a></li>
+      <li><a href="./recipes/bltsalad.html">BLT Bow Tie Salad</a></li>
+    </ul>
   </body>
 </html>
