Finalizes tuna salad page

--- a/recipes/tunasalad.html
+++ b/recipes/tunasalad.html
@@ -10,16 +10,24 @@
     <img src="https://www.allrecipes.com/thmb/HI3If7JmmYfp8ihGH5Erj9iFcQg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1001465-0a2b762698e3428fa666cf0c534a169b.jpg">
 
     <h2>Description</h2>
-    <p></p>
+    <p>A healthy tuna salad to be enjoyed in multiple ways!</p>
 
     <h2>Ingredients</h2>
     <ul>
-
+      <li>1 (5 ounce) can tuna in water, drained</li>
+      <li>1/3 cup dried cranberries</li>
+      <li>1/2 sweet apple, cut into 1/4-inch pieces</li>
+      <li>2 tablespoons light mayonnaise</li>
+      <li>1 green onion, chopped</li>
+      <li>sea salt to taste</li>
+      <li>ground black pepper to taste</li>
+      <li>4 cups chopped fresh spinach</li>
     </ul>
     
     <h2>Steps</h2>
     <ol>
-      
+      <li>Mix tuna, cranberries, apple, mayonnaise, green onion, sea salt, and black pepper together in a bowl; refrigerate 1 hour.</li>
+      <li>Put 2 cups spinach on each of 2 plates. Top spinach with about half the tuna salad.</li>
     </ol>
   </body>
 </html>
