Finalizes blt salad page and credits allrecipes.com

--- a/recipes/bltsalad.html
+++ b/recipes/bltsalad.html
@@ -10,12 +10,25 @@
     <img src="https://www.allrecipes.com/thmb/xvYAyonqFaxoCNzGrNgTcqsQm70=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/975161-04902b6efea749cfb3e3d13bd031a596.jpg">
 
     <h2>Description</h2>
-    <p></p>
+    <p>A perfect summer salad for any gathering! The salad is a combination of bow tie pasta, fresh tomatoes, crumbled bacon, and bits of lettuce in a delicious ranch dressing.</p>
 
     <h2>Ingredients</h2>
-    <ul></ul>
+    <ul>
+      <li>1 (12 ounce) package bow tie pasta (farfalle)</li>
+      <li>2 1/2 cups diced fresh tomatoes</li>
+      <li>3/4 cup cooked crumbled bacon</li>
+      <li>1/2 head romaine lettuce, torn</li>
+      <li>3/4 cup mayonnaise</li>
+      <li>3/4 cup ranch dressing</li>
+      <li>1 pinch onion powder, or to taste</li>
+      <li>1 pinch garlic salt, or to taste</li>
+      <li>ground black bepper to taste`</li>
+    </ul>
 
     <h2>Steps</h2>
-    <ol></ol>
+    <ol>
+      <li>Bring a large pot of lightly salted water to a boil. Cook bow tie pasta at a boil, stirring occasionally, until cooked through yet firm to the bite, about 12 minutes; drain. Transfer to a large bowl.</li>
+      <li>Stir tomatoes, bacon, and romaine lettuce into bow tie pasta. Whisk mayonnaise, ranch dressing, onion powder, garlic salt, and black pepper together in a small bowl. Pour over pasta mixture; toss to coat. Chill in refrigerator for 2 to 3 hours before serving.</li>
+    </ol>
   </body>
 </html>
