--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <p>All recipes can be found at <a href="https://www.allrecipes.com" target="_blank" rel="noreferrer">allrecipes.com</a></p>
     <ul>
-      <li><a href="./recipes/cinnamonroll.html">Cinnamon Roll Pull-Apart Toast</a></li>
-      <li><a href="./recipes/tunasalad.html">Tuna Salad</a></li>
-      <li><a href="./recipes/bltsalad.html">BLT Bow Tie Salad</a></li>
+      <li><a href="./recipes/cinnamonroll.html" target="_blank">Cinnamon Roll Pull-Apart Toast</a></li>
+      <li><a href="./recipes/tunasalad.html" target="_blank">Tuna Salad</a></li>
+      <li><a href="./recipes/bltsalad.html" target="_blank">BLT Bow Tie Salad</a></li>
     </ul>
   </body>
 </html>
